feat: added search methods for itemstocks