@@ -153,7 +153,7 @@ public class StockViewController {
         }
 
         if (productStockDto.getMaterial().getMaterialNumberCustomer() == null ||
-            productStockDto.getMaterial().getMaterialNumberCustomer().isEmpty()){
+            productStockDto.getMaterial().getMaterialNumberCustomer().isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Product Stock misses material identification.");
         }
 
@@ -161,7 +161,7 @@ public class StockViewController {
 
         productStockToCreate.setLastUpdatedOnDateTime(new Date());
 
-        if (!productItemStockService.validate(productStockToCreate)){
+        if (!productItemStockService.validate(productStockToCreate)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Product Stock is invalid.");
         }
 
@@ -169,16 +169,16 @@ public class StockViewController {
             productStockToCreate.getPartner(),
             productStockToCreate.getMaterial());
 
-        boolean stockDoesExist = existingProductItemStocks.stream().filter( stock ->
+        boolean stockDoesExist = existingProductItemStocks.stream().filter(stock ->
             stock.isBlocked() == productStockToCreate.isBlocked() &&
-            stock.getLocationBpns().equals(productStockToCreate.getLocationBpns()) &&
-            stock.getLocationBpna().equals(productStockToCreate.getLocationBpna()) &&
-            Objects.equals(stock.getCustomerOrderId(), productStockToCreate.getCustomerOrderId()) &&
-            Objects.equals(stock.getCustomerOrderPositionId(), productStockToCreate.getCustomerOrderPositionId()) &&
-            Objects.equals(stock.getSupplierOrderId(), productStockToCreate.getSupplierOrderId())
+                stock.getLocationBpns().equals(productStockToCreate.getLocationBpns()) &&
+                stock.getLocationBpna().equals(productStockToCreate.getLocationBpna()) &&
+                Objects.equals(stock.getCustomerOrderId(), productStockToCreate.getCustomerOrderId()) &&
+                Objects.equals(stock.getCustomerOrderPositionId(), productStockToCreate.getCustomerOrderPositionId()) &&
+                Objects.equals(stock.getSupplierOrderId(), productStockToCreate.getSupplierOrderId())
         ).anyMatch(stock -> true);
 
-        if (stockDoesExist){
+        if (stockDoesExist) {
             throw new ResponseStatusException(HttpStatus.CONFLICT, "Product Stock does already exist. Use PUT instead.");
         }
 
@@ -247,7 +247,7 @@ public class StockViewController {
 
         Partner existingPartner = partnerService.findByBpnl(allocationPartner.getBpnl());
 
-        if (existingPartner == null){
+        if (existingPartner == null) {
             throw new IllegalStateException(String.format(
                 "Partner for bpnl %s could not be found",
                 allocationPartner.getBpnl())
@@ -291,35 +291,35 @@ public class StockViewController {
         }
 
         if (materialStockDto.getMaterial().getMaterialNumberCustomer() == null ||
-            materialStockDto.getMaterial().getMaterialNumberCustomer().isEmpty()){
+            materialStockDto.getMaterial().getMaterialNumberCustomer().isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Material Stock misses material identification.");
         }
 
         MaterialItemStock materialStockToCreate = convertToEntity(materialStockDto);
         materialStockToCreate.setLastUpdatedOnDateTime(new Date());
 
-        if (!materialItemStockService.validate(materialStockToCreate)){
+        if (!materialItemStockService.validate(materialStockToCreate)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Material Stock is invalid.");
         }
 
         List<MaterialItemStock> existingMaterialItemStocks = materialItemStockService.findByPartnerAndMaterial(materialStockToCreate.getPartner(),
             materialStockToCreate.getMaterial());
 
-        boolean stockDoesExist = existingMaterialItemStocks.stream().filter( stock ->
+        boolean stockDoesExist = existingMaterialItemStocks.stream().filter(stock ->
             stock.isBlocked() == materialStockToCreate.isBlocked() &&
-            stock.getLocationBpns().equals(materialStockToCreate.getLocationBpns()) &&
-            stock.getLocationBpna().equals(materialStockToCreate.getLocationBpna()) &&
-            Objects.equals(stock.getCustomerOrderId(), materialStockToCreate.getCustomerOrderId()) &&
-            Objects.equals(stock.getCustomerOrderPositionId(), materialStockToCreate.getCustomerOrderPositionId()) &&
-            Objects.equals(stock.getSupplierOrderId(), materialStockToCreate.getSupplierOrderId())
+                stock.getLocationBpns().equals(materialStockToCreate.getLocationBpns()) &&
+                stock.getLocationBpna().equals(materialStockToCreate.getLocationBpna()) &&
+                Objects.equals(stock.getCustomerOrderId(), materialStockToCreate.getCustomerOrderId()) &&
+                Objects.equals(stock.getCustomerOrderPositionId(), materialStockToCreate.getCustomerOrderPositionId()) &&
+                Objects.equals(stock.getSupplierOrderId(), materialStockToCreate.getSupplierOrderId())
         ).anyMatch(stock -> true);
 
-        if (stockDoesExist){
+        if (stockDoesExist) {
             throw new ResponseStatusException(HttpStatus.CONFLICT, "Material Stock does already exist. Use PUT instead.");
         }
 
         MaterialItemStock createdMaterialStock = materialItemStockService.create(materialStockToCreate);
-        if (createdMaterialStock == null){
+        if (createdMaterialStock == null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Material Stock could not be created.");
         }
 
@@ -381,7 +381,7 @@ public class StockViewController {
 
         Partner existingPartner = partnerService.findByBpnl(partnerDto.getBpnl());
 
-        if (existingPartner == null){
+        if (existingPartner == null) {
             throw new IllegalStateException(String.format(
                 "Partner for bpnl %s could not be found",
                 partnerDto.getBpnl())
@@ -407,16 +407,14 @@ public class StockViewController {
         @ApiResponse(responseCode = "400", description = "Invalid parameter")
     })
     public ResponseEntity<List<ReportedMaterialStockDto>> getSupplierMaterialStocks(@RequestParam String ownMaterialNumber) {
-        if(!materialPattern.matcher(ownMaterialNumber).matches()) {
+        if (!materialPattern.matcher(ownMaterialNumber).matches()) {
             return new ResponseEntity<>(HttpStatusCode.valueOf(400));
         }
-        
         return ResponseEntity.ok(reportedMaterialItemStockService.
-            findAll()
+            findByOwnMaterialNumber(ownMaterialNumber)
             .stream()
-                .filter(stock -> stock.getMaterial().getOwnMaterialNumber().equals(ownMaterialNumber))
             .map(this::convertToDto)
-            .collect(Collectors.toList()));
+            .toList());
     }
 
     private ReportedMaterialStockDto convertToDto(ReportedMaterialItemStock entity) {
@@ -445,15 +443,14 @@ public class StockViewController {
         @ApiResponse(responseCode = "400", description = "Invalid parameter")
     })
     public ResponseEntity<List<ReportedProductStockDto>> getCustomerProductStocks(@RequestParam String ownMaterialNumber) {
-        if(!materialPattern.matcher(ownMaterialNumber).matches()) {
+        if (!materialPattern.matcher(ownMaterialNumber).matches()) {
             return new ResponseEntity<>(HttpStatusCode.valueOf(400));
         }
         return ResponseEntity.ok(reportedProductItemStockService.
-            findAll()
+            findByOwnMaterialNumber(ownMaterialNumber)
             .stream()
-            .filter(stock -> stock.getMaterial().getOwnMaterialNumber().equals(ownMaterialNumber))
             .map(this::convertToDto)
-            .collect(Collectors.toList()));
+            .toList());
     }
 
     private ReportedProductStockDto convertToDto(ReportedProductItemStock entity) {
@@ -481,7 +478,7 @@ public class StockViewController {
         @ApiResponse(responseCode = "400", description = "Invalid parameter")
     })
     public ResponseEntity<List<PartnerDto>> getCustomerPartnersOrderingMaterial(@RequestParam String ownMaterialNumber) {
-        if(!materialPattern.matcher(ownMaterialNumber).matches()) {
+        if (!materialPattern.matcher(ownMaterialNumber).matches()) {
             return new ResponseEntity<>(HttpStatusCode.valueOf(400));
         }
         return ResponseEntity.ok(partnerService.findAllCustomerPartnersForMaterialId(ownMaterialNumber).stream()
@@ -496,7 +493,7 @@ public class StockViewController {
         @ApiResponse(responseCode = "400", description = "Invalid parameter")
     })
     public ResponseEntity<List<PartnerDto>> getSupplierPartnersSupplyingMaterial(@RequestParam String ownMaterialNumber) {
-        if(!materialPattern.matcher(ownMaterialNumber).matches()) {
+        if (!materialPattern.matcher(ownMaterialNumber).matches()) {
             return new ResponseEntity<>(HttpStatusCode.valueOf(400));
         }
         return ResponseEntity.ok(partnerService.findAllSupplierPartnersForMaterialId(ownMaterialNumber).stream()
@@ -515,7 +512,7 @@ public class StockViewController {
         @ApiResponse(responseCode = "400", description = "Invalid parameter")
     })
     public ResponseEntity<List<PartnerDto>> triggerReportedMaterialStockUpdateForMaterialNumber(@RequestParam String ownMaterialNumber) {
-        if(!materialPattern.matcher(ownMaterialNumber).matches()) {
+        if (!materialPattern.matcher(ownMaterialNumber).matches()) {
             return new ResponseEntity<>(HttpStatusCode.valueOf(400));
         }
         Material materialEntity = materialService.findByOwnMaterialNumber(ownMaterialNumber);
